# funding_slackbot

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: funding-bot-schedule.yml
docs/: funding-source-review-2026-06-18.md  llama-router-setup.md
ops/logrotate/: funding_slackbot
scripts/: run-cron.sh
src/funding_slackbot/: __init__.py  cli.py  config.py  llm.py  logging_config.py  models.py  service.py
src/funding_slackbot/filters/: __init__.py  base.py  keyword_filter.py  llm_filter.py
src/funding_slackbot/notifiers/: __init__.py  base.py  slack_webhook.py
src/funding_slackbot/sources/: __init__.py  _common.py  academy_medical_sciences.py  aria.py  base.py  british_academy.py  cancer_research.py  horizon_europe.py  innovation.py  leverhulme.py  nihr.py  portsmouth_jobs.py  raeng.py  registry.py  royal_society.py  rss_feed.py  rss_source.py  uk_space_agency.py  wellcome.py
src/funding_slackbot/store/: __init__.py  base.py  sqlite_store.py
src/funding_slackbot/utils/: datetime_utils.py  url_utils.py
tests/: test_config.py  test_datetime_utils.py  test_dedupe.py  test_filtering.py  test_llm.py  test_llm_filter.py  test_new_sources.py  test_rss_source.py  test_slack_webhook.py  test_sources_registry.py
